Add problems to Number Theory 102

--- a/01 - Modular arithmetic.tex
+++ b/01 - Modular arithmetic.tex
@@ -80,7 +80,7 @@
       \[ a + b = q_a n + r_a + q_b n + r_b = (q_a + q_b) n + (r_a + r_b) \]
       That means we can ignore $(q_a + q_b) n$ and $q_c n$ when considering numbers \emph{modulo} $n$. So we have 
       \[ r_a + r_b \equiv r_c \pmod{n}. \]
-      Which we wanted to proof.
+      Which we wanted to prove.
       \begin{example}
         For example:
         \[ 2021 \equiv 2000 + 20 + 1 \pmod{n} \]
@@ -93,7 +93,7 @@
         \[a\Mod{n} \times b\Mod{n} \equiv c\Mod{n}.\]
         To find the \textbf{remainder of the product} of $a$ and $b$, we can instead \textbf{multiply the remainders} of the two factors.
       \end{theorem}
-      Doing the same substitution as in proof of the \emph{addition theorem}
+      Doing the same substitution as in the proof of the \emph{addition theorem}
       \begin{multline*}
         a \times b = (q_a n + r_a) (q_b n + r_b) = \\ = q_a q_b n^2 + (q_a r_b + q_b r_a) n + r_a r_b.
       \end{multline*}
