Add solution for points in a rectangle

--- a/03 - Probablity solutions.tex
+++ b/03 - Probablity solutions.tex
@@ -1,4 +1,4 @@
-\documentclass[9pt,aspectratio=169]{beamer}
+\documentclass[9pt,aspectratio=169,handout]{beamer}
 
 \usepackage{nicefrac}
 \usepackage{tabularx}
